removing getFirst and removeFirst uncompiled methods